fixed modal on mobiles

--- a/src/assets/styles/base.scss
+++ b/src/assets/styles/base.scss
@@ -21,4 +21,5 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   min-width: 375px;
+  background-color: var(--color-background);
 }
